--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.4"
+    "mongoose": "^5.10.4",
+    "react-burger-menu": "^2.9.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
