--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
+    "lint": "eslint --project",
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run server \" \"npm run client\"",
@@ -28,7 +29,14 @@
     "react-burger-menu": "^2.9.0"
   },
   "devDependencies": {
+    "@types/reach__router": "^1.3.6",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^5.0.0",
+    "typescript": "^4.1.2"
   }
 }
