--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.4",
+    "node-sass": "^4.14.1",
     "react-burger-menu": "^2.9.0"
   },
   "devDependencies": {
