--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "@types/styled-components": "^5.1.7",
+    "eslint-plugin-react-hooks": "^4.2.0"
+  }
 }
