--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/reach__router": "^1.3.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.7",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4",
     "tslint": "^6.1.3",
