--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.13.1",
     "react-onclickoutside": "^6.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.0"
