fixed Discogs request

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-DiscogsAppKey = 'NDojcxfzXQKCDcJbMYiA';
-DiscogsAppSecret = 'OVhZRVYcvQiaQSrIlqQqFDqXzENIDEJF';
+REACT_APP_DISCOGS_KEY = 'xMeeXyGtbWoQzNmZdhaC'
+REACT_APP_DISCOGS_SECRET = 'zfvOlGXYbFlHHwmwMhFQXQjGpPrhucXw'
